--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "IgniteXL",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.html",
   "scripts": {
     "start": "parcel src/index.html --open",
-    "clean": "rm -rf dist/*",
-    "build:parcel": "parcel build src/index.html --no-content-hash --no-minify --no-source-maps --public-url ./",
-    "build": "npm run clean && npm run build:parcel"
+    "clean": "del -rf 'dist/*'",
+    "build:parcel": "parcel build src/index.html --no-content-hash --no-source-maps --public-url ./",
+    "build": "npm run build:parcel"
   },
   "author": "slimyangy",
   "license": "MIT",
